made bools pointers
